--- a/kontakt.html
+++ b/kontakt.html
@@ -56,7 +56,7 @@
             <div class="footer-section">
                 <h3>Kontakt</h3>
                 <p>Hana Novotná</p>
-                <p>Email: hanina@email.cz</p>
+                <p>Email: haninaliciuci@gmail.com</p>
                 <p>Tel: +420 777 149 916</p>
             </div>
             <div class="footer-section">
